# CMakeProjectTpl

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt
